Colaboratory를 통해 생성됨

--- a/GoingDeeper(NLP)_2_단어사전만들기.ipynb
+++ b/GoingDeeper(NLP)_2_단어사전만들기.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "mount_file_id": "1wa5uH4OqbqeKkTdV7Hwe3JdtiiOKZtaB",
-      "authorship_tag": "ABX9TyMllFM9j/HtQZYScwXTjchX",
+      "authorship_tag": "ABX9TyMNG8C0teS5dEQ9lt7MC7rQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,13 +60,39 @@
     {
       "cell_type": "code",
       "source": [
+        "%%bash\n",
+        "apt-get update\n",
+        "apt-get install g++ openjdk-8-jdk python-dev python3-dev\n",
+        "pip3 install JPype1\n",
+        "pip3 install konlpy"
+      ],
+      "metadata": {
+        "id": "a2YzZKnqQ7HK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%env JAVA_HOME \"/usr/lib/jvm/java-8-openjdk-amd64\""
+      ],
+      "metadata": {
+        "id": "klTJZLZdQ3C7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import tensorflow\n",
         "import keras"
       ],
       "metadata": {
         "id": "4P3go_0JAe2-"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +105,7 @@
       "metadata": {
         "id": "eGJafNX0Alui"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +142,7 @@
         "id": "P7DxinqNCHDp",
         "outputId": "054e540b-5555-4f7f-a900-4a2d2c0a42c4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +212,7 @@
         "id": "5E1C7_tKDaHJ",
         "outputId": "a373b0a7-fed3-467b-fd39-92aa94e0df6d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +283,7 @@
         "id": "SE0JHvkcE38c",
         "outputId": "5e557f66-bc71-411c-c71c-c981b6bcf04d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +317,7 @@
         "id": "hJAXJDOhFOz3",
         "outputId": "b79b020f-de58-4952-cb9f-f5617a80e362"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +342,7 @@
         "id": "69CR6bC0FmnY",
         "outputId": "4c9de27b-9934-4992-a936-8d3a6fcf37d6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +503,7 @@
         "id": "6UU5xSEBFtQb",
         "outputId": "ee37c435-27e6-4676-fe7e-7d88ab07a5bb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +574,7 @@
         "id": "0nE0qsGbG_yR",
         "outputId": "a4be07f1-6014-42e1-bb97-ee621535f82f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +626,7 @@
       "metadata": {
         "id": "ZtaywDVvIIlc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +642,7 @@
         "id": "ZuF__FZPKfnH",
         "outputId": "4791d66a-6c85-4237-c7df-6be75df136be"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +679,7 @@
       "metadata": {
         "id": "i_u3QzygKNk8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -668,7 +694,7 @@
         "id": "c1nA8TRWLRZo",
         "outputId": "56eec506-22ca-4ce4-808a-7ef96a86181d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +732,7 @@
         "id": "dXzMqnT_Lv64",
         "outputId": "a9a0b5b8-8fa7-4760-a7b9-ed82d1037464"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,7 +761,7 @@
         "id": "H6BXwOehMAcW",
         "outputId": "63c9d582-e9ec-477c-855c-9ade01e978ef"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +823,7 @@
       "metadata": {
         "id": "prBlt8btMKdU"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -823,7 +849,7 @@
         "id": "yh6spfRSOUiF",
         "outputId": "fcd77818-42c0-4888-d061-27213f3d888c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +894,7 @@
         "id": "qqL0MNEYRg5W",
         "outputId": "4e2ce252-63f2-48f7-b224-06a7dbf3eab6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +930,7 @@
         "id": "lEYMfW4zOkLR",
         "outputId": "749d6066-d416-41cc-a84c-77369397e087"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -940,7 +966,7 @@
         "id": "8mhn05isQ-Pa",
         "outputId": "1af777d5-245d-492a-fb29-82dca96e874c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +1009,7 @@
         "id": "IhBkeRPtShS4",
         "outputId": "3580359a-b573-4c14-f551-260e5cfe5cac"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1022,7 +1048,7 @@
         "id": "8-uFaBdVTBCr",
         "outputId": "951b9ad1-302e-46c2-db50-2547c960ee81"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1095,7 @@
         "id": "gW3CSBQJT1OA",
         "outputId": "63b8f3a6-1dfc-4735-ec7d-954c0d5b0ae8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1115,7 +1141,7 @@
         "id": "31bjweLFVelG",
         "outputId": "2c27b5f0-e2bd-4a26-b063-33341113702e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1166,7 @@
         "id": "XGECetinGUNg",
         "outputId": "061367ba-af56-4362-e919-712e5014bfcb"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1166,7 +1192,7 @@
         "id": "2XyzQjZkGaWe",
         "outputId": "26dfeff8-2762-4316-8ede-b91547bd2144"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1223,7 +1249,7 @@
       "metadata": {
         "id": "wsZO1ZG4aGOz"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1284,7 +1310,7 @@
       "metadata": {
         "id": "JUAaPUypwqGg"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1299,7 +1325,7 @@
         "id": "Yq8_Hi6cyV5I",
         "outputId": "927df89a-0e96-4dfa-fac3-307091980314"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1326,7 +1352,7 @@
         "id": "3lZC-lkCyYYf",
         "outputId": "8baac75a-a7ed-4320-c782-d10f0283c09c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1491,7 +1517,7 @@
       "metadata": {
         "id": "gcad1mGxynMu"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1507,7 +1533,7 @@
         "id": "4hvWi2hyyuj4",
         "outputId": "6d42997e-53d9-40ec-cb5b-16bcd83a0164"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,7 +1698,7 @@
       "metadata": {
         "id": "GY4csCUi22Es"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1687,7 +1713,7 @@
         "id": "ccV36TCR3DBl",
         "outputId": "7480a6bd-a2d0-476f-9def-870f80827e36"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1710,7 +1736,7 @@
       "metadata": {
         "id": "anSUBVr64JC1"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1725,7 +1751,7 @@
         "id": "8dgYtLnr4gx2",
         "outputId": "0ae2621d-2ff4-469f-c8bd-f79bc1fca50a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1752,7 +1778,7 @@
         "id": "7A1xrK9oyw92",
         "outputId": "57db7fca-d742-421c-c0db-2c43d964ad7c"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1813,7 +1839,7 @@
         "id": "BF9l6Rdhzanv",
         "outputId": "e1773bbe-9757-4820-b4e4-bb257a647f13"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1864,7 +1890,7 @@
         "id": "NAArqeN57HqE",
         "outputId": "7b8c97d6-a8e8-4f9e-8ce8-f1777606e3f6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1920,7 +1946,7 @@
         "id": "T6THKLOyk0xM",
         "outputId": "b6bdc177-3899-440e-a59a-680bd06771e5"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1969,7 +1995,7 @@
       "metadata": {
         "id": "UHpR9cTq1eJd"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1995,7 +2021,7 @@
       "metadata": {
         "id": "XyiMqJw0C8kw"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2010,7 +2036,7 @@
         "id": "pnr_m8nrJX4O",
         "outputId": "57ba613d-65ba-4d20-b516-33e305096e5e"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2036,7 +2062,7 @@
         "id": "6b7arrUyfB2g",
         "outputId": "edf50fef-12e2-446d-a403-baa4c0f0be9d"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2059,7 +2085,7 @@
       "metadata": {
         "id": "Z8mcxeYWR7PU"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2077,7 +2103,7 @@
         "id": "nSLadoewgFan",
         "outputId": "ebfaa74e-41f1-4348-f2ef-16e629a732ce"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2123,7 +2149,7 @@
       "metadata": {
         "id": "P7v-PVeus4zw"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2138,7 +2164,7 @@
         "id": "nOw6YFWPus8H",
         "outputId": "24de9736-b5da-4d5b-e77e-99e286462aa0"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2175,7 +2201,7 @@
         "id": "tqa3guz9u6LF",
         "outputId": "958ac8f4-4280-4287-88ea-f63357b82ede"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2228,7 +2254,7 @@
         "id": "oXqp976uyIoA",
         "outputId": "fc56707b-668a-45be-cc65-737495f0434d"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2256,7 +2282,7 @@
         "id": "IE8lBzMW-VnT",
         "outputId": "0485ca53-33bf-4bab-c8d0-a013bbc92c49"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2300,7 +2326,7 @@
         "id": "R8a8YoUG-9-5",
         "outputId": "f5f8aff6-63f6-49fc-8a84-24909cf957df"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2411,7 +2437,7 @@
       "metadata": {
         "id": "S5qlsd57oKdD"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2431,7 +2457,7 @@
         "id": "5AtA9TnNosRG",
         "outputId": "47c763ef-27e4-4d2a-e92c-68b0d5d35fb0"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2474,7 +2500,7 @@
         "id": "VrbPrGpLo_Sb",
         "outputId": "b853e6e2-e55a-4fac-83d8-4a93057204cb"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2512,7 +2538,7 @@
         "id": "rHCkn4NDpKFJ",
         "outputId": "10bf2000-e925-46f0-f8e3-98acf61883ea"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2538,7 +2564,7 @@
       "metadata": {
         "id": "fc2vKTwJpYTj"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2554,7 +2580,7 @@
       "metadata": {
         "id": "5vQZQXl6piw0"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2580,7 +2606,7 @@
         "id": "yhVTWFe4pma8",
         "outputId": "8833ea07-9c82-44a0-8138-5b00b7c50746"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2633,7 +2659,7 @@
         "id": "3djc8k-LpqWw",
         "outputId": "c2bebbb5-95fe-4c9f-9f0f-9938c737a6ee"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2686,7 +2712,7 @@
         "id": "-AxmE7dfpu68",
         "outputId": "a03eb773-f08c-4779-81f2-4d1e749cb98b"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2763,7 +2789,7 @@
       "metadata": {
         "id": "arJPTnDfPrJG"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2778,7 +2804,7 @@
         "id": "QYaSTgGJQSFs",
         "outputId": "6e66c09f-6a92-4186-ba65-11de767862e9"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2807,7 +2833,7 @@
         "id": "TKMtUoAIP0qU",
         "outputId": "39daafa1-e9b8-471f-b06b-f11445b22198"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2977,7 +3003,7 @@
         "id": "6-ZWA7PxQKqr",
         "outputId": "4d38b0c0-a67b-456d-a336-10fa1100861d"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3163,7 +3189,7 @@
       "metadata": {
         "id": "mluQujJ5ZDtm"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3174,7 +3200,7 @@
       "metadata": {
         "id": "lhbaRMwMbGhT"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3224,7 +3250,7 @@
       "metadata": {
         "id": "uNJeDSgAQfk_"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3235,7 +3261,7 @@
       "metadata": {
         "id": "s0MlsrAiBjNq"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3246,7 +3272,7 @@
       "metadata": {
         "id": "IMJZ11EAUNRN"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3272,7 +3298,7 @@
       "metadata": {
         "id": "6Y9ipjstUbsq"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3311,7 +3337,7 @@
         "id": "f_6soLZdUkM8",
         "outputId": "8438b9ce-e096-47a6-8274-959196bcdd5e"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3352,7 +3378,7 @@
         "id": "SNVcwcHDU0xY",
         "outputId": "78638805-ab48-44cf-a32b-8385d03dccd3"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3374,7 +3400,7 @@
       "metadata": {
         "id": "0ZPsfsTXZzbC"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3397,7 +3423,7 @@
         "id": "HFftkCxwVAxo",
         "outputId": "1fc9072c-93b6-4ff0-d999-f4d562062750"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3447,7 +3473,7 @@
         "id": "cYznQYrMVSoX",
         "outputId": "79900b8a-b8f8-46a0-9315-0ea134ba495d"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3474,7 +3500,7 @@
         "id": "oaLaiDrTVq88",
         "outputId": "136c6e3a-d4a9-4383-b17d-7154a804a7c6"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3520,7 +3546,7 @@
         "id": "K2yLz1oPbFbp",
         "outputId": "8209c6cf-53ee-4767-adc3-232017a4a4e6"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
