Colaboratory를 통해 생성됨

--- a/Transformer_한영번역기.ipynb
+++ b/Transformer_한영번역기.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Z0U98FVFLh-AeNPQtI-vQ-g7IqlzMKd_",
-      "authorship_tag": "ABX9TyM547x8nP+ZWNRBPkiJO4Tw",
+      "authorship_tag": "ABX9TyOpq/+rnrCh5foczbWyON06",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1771,7 +1771,7 @@
         "|pos_len|100 |100 |200 |200 |\n",
         "|dropout|0.1 |0.1 |0.2 |0.2 |\n",
         "|vocab_size|srs, tgt : 25000|srs, tgt : 25000 |srs, tgt : 25000 |srs, tgt : 32000 |\n",
-        "|preprocess|sentencepiece : 'unigram' \\| toekn_restrict : 3$\\leq$#token$\\leq$50 |sentencepiece : 'bpe' \\| toekn_restrict : 3$\\leq$#token$\\leq$60 |sentencepiece : 'unigram' \\| toekn_restrict : 3$\\leq$#token$\\leq$60 |sentencepiece : 'unigram' \\| toekn_restrict : 3$\\leq$#token$\\leq$60 |\n",
+        "|preprocess|sentencepiece : 'unigram' <br><br> toekn_restrict : 3$\\leq$#token$\\leq$50 |sentencepiece : 'bpe' <br><br> toekn_restrict : 3$\\leq$#token$\\leq$60 |sentencepiece : 'unigram' <br><br> toekn_restrict : 3$\\leq$#token$\\leq$60 |sentencepiece : 'unigram' <br><br> toekn_restrict : 3$\\leq$#token$\\leq$60 |\n",
         "|best translation|[Epoch 13:  Loss 0.3270]<br><br>Input: 오바마는 대통령이다.<br>Predicted translation: obama is the son of president .<br><br>Input: 시민들은 도시 속에 산다.<br>Predicted translation: some quick get in the city .<br><br>Input: 커피는 필요 없다.<br>Predicted translation: no one is coffee .<br><br>Input: 일곱 명의 사망자가 발생했다.<br>Predicted translation: seven other people died in the attack .<br><br>Input: 넌 젖을수록 투명해지는 꽃<br>Predicted translation: the equivalent of the horses , williams then turned out very cars with what s happening . |[Epoch  4: Loss 3.8017]<br><br>Input: 오바마는 대통령이다.<br>Predicted translation: obama is a leading presidential candidate .<br><br>Input: 시민들은 도시 속에 산다.<br>Predicted translation: the city s main city .<br><br>Input: 커피는 필요 없다.<br>Predicted translation: coffee is not allowed .<br><br>Input: 일곱 명의 사망자가 발생했다.<br>Predicted translation: seven people have died .<br><br>Input: 넌 젖을수록 투명해지는 꽃<br>Predicted translation: the paper said that snails and transparently . |[Epoch  6:  Loss 2.2295]<br><br>Input: 오바마는 대통령이다.<br>Predicted translation: obama is the democratic presidential candidate .<br><br>Input: 시민들은 도시 속에 산다.<br>Predicted translation: citizens are called in the city of commemorate the city .<br><br>Input: 커피는 필요 없다.<br>Predicted translation: you can t need for coffee .<br><br>Input: 일곱 명의 사망자가 발생했다.<br>Predicted translation: seven people died , the official said .<br><br>Input: 넌 젖을수록 투명해지는 꽃<br>Predicted translation: others have left more transparent and have caused serious tumor . |[Epoch 15:  Loss 0.2896]<br><br>Input: 오바마는 대통령이다.<br>Predicted translation: obama is ahead of the president .<br><br>Input: 시민들은 도시 속에 산다.<br>Predicted translation: they want to get out of this country .<br><br>Input: 커피는 필요 없다.<br>Predicted translation: needed to do your needed .<br><br>Input: 일곱 명의 사망자가 발생했다.<br>Predicted translation: seven people were killed .<br><br>Input: 넌 젖을수록 투명해지는 꽃<br>Predicted translation: and the fact that the kids were born when they were born drunk to 41 percent of attack people . |\n",
         "|평가|어느정도 중요한 단어는 포함하고 있지만 의미가 맞는 문장이 그닥 없음 | 전보다 훨씬 의미적으로 쓸만한 문장들이 나옴|마지막 문장은 훈련 데이터에 관련 단어나 내용이 너무 없어서 그런지는 몰라도 번역을 너무 못하는 모습을 보임. |어째 단어장 크기를 늘리니까 더 이상해지는 것 같기도….허허 |"
       ],
