Colaboratory를 통해 생성됨

--- a/mini_BERT_만들기.ipynb
+++ b/mini_BERT_만들기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1qvlrt-JRNMk53lf5P46Tg1Pi0lugFJ0N",
-      "authorship_tag": "ABX9TyPJL8bEf48alD68//e9MkHQ",
+      "authorship_tag": "ABX9TyP7LUhtQe76GwGxFarv+ynM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1715,7 +1715,7 @@
         "    for (i, token) in enumerate(tokens):\n",
         "        if token == \"[CLS]\" or token == \"[SEP]\":\n",
         "            continue\n",
-        "        if 0 < len(cand_idx) and not token.startswith(u\"\\u2581\"):\n",
+        "        if 0 < len(cand_idx) and not token.startswith(u\"\\u2581\"): # u\"\\u2581\"는 단어의 시작을 의미하는 값\n",
         "            cand_idx[-1].append(i)\n",
         "        else:\n",
         "            cand_idx.append([i])\n",
@@ -1724,7 +1724,7 @@
         "\n",
         "    mask_lms = []  # mask 된 값\n",
         "    for index_set in cand_idx:\n",
-        "        if len(mask_lms) >= mask_cnt:  # 핸재 mask된 개수가 15%를 넘으면 중지\n",
+        "        if len(mask_lms) >= mask_cnt:  # 현재 mask된 개수가 15%를 넘으면 중지\n",
         "            break\n",
         "        if len(mask_lms) + len(index_set) > mask_cnt:  # 이번에 mask할 개수를 포함해 15%를 넘으면 skip\n",
         "            continue\n",
@@ -2269,7 +2269,7 @@
         "    \"\"\"\n",
         "    doc별 pretrain 데이터 생성\n",
         "    \"\"\"\n",
-        "    # for CLS], [SEP], [SEP]\n",
+        "    # for [CLS], [SEP], [SEP]\n",
         "    max_seq = n_seq - 3\n",
         "\n",
         "    instances = []\n",
@@ -3021,6 +3021,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#@tf.function(reduce_retracing=True)\n",
+        "## experimental_relax_shapes는 더이상 안쓴다는디.\n",
         "@tf.function(experimental_relax_shapes=True)\n",
         "def gelu(x):\n",
         "    \"\"\"\n",
@@ -3091,7 +3093,7 @@
       "source": [
         "class SharedEmbedding(tf.keras.layers.Layer):\n",
         "    \"\"\"\n",
-        "    Weighed Shaed Embedding Class\n",
+        "    Weighed Shared Embedding Class\n",
         "    \"\"\"\n",
         "    def __init__(self, config, name=\"weight_shared_embedding\"):\n",
         "        \"\"\"\n",
@@ -3103,16 +3105,18 @@
         "\n",
         "        self.n_vocab = config.n_vocab\n",
         "        self.d_model = config.d_model\n",
-        "    \n",
+        "    # build는 레이어 안에 변수를 만들어주는 것.\n",
+        "    # variables는 보통 학습가능한? 가중치 같은것들.\n",
         "    def build(self, input_shape):\n",
         "        \"\"\"\n",
         "        shared weight 생성\n",
         "        :param input_shape: Tensor Shape (not used)\n",
         "        \"\"\"\n",
         "        with tf.name_scope(\"shared_embedding_weight\"):\n",
+        "            # build 함수 안에서 self.add_weight를 이용해 가중치를 간단하게 만들어주는 것임.\n",
         "            self.shared_weights = self.add_weight(\n",
         "                \"weights\",\n",
-        "                shape=[self.n_vocab, self.d_model],\n",
+        "                shape=[self.n_vocab, self.d_model], # 임베딩 레이어기 때문에 사이즈를 단어장 X 임베딩 차원으로 만들어줌.\n",
         "                initializer=kernel_initializer()\n",
         "            )\n",
         "\n",
@@ -3138,6 +3142,8 @@
         "        embedding lookup\n",
         "        :param inputs: 입력\n",
         "        \"\"\"\n",
+        "        # tf.gather는 간단하게 보면 룩업테이블에서 인덱스 번호를 가져오는 것.\n",
+        "        # inputs에 해당하는 단어들의 임베딩을 가져온다고 보면 될듯.\n",
         "        embed = tf.gather(self.shared_weights, tf.cast(inputs, tf.int32))\n",
         "        return embed\n",
         "\n",
@@ -3182,6 +3188,11 @@
         "        :param inputs: 입력\n",
         "        :return embed: position embedding lookup 결과\n",
         "        \"\"\"\n",
+        "        # tf.math.cumsum = 누적합(cumulative sum) 진행하는 함수임.\n",
+        "        # axis=1 로 각 행마다 열방향으로 누적합\n",
+        "        # exclusive=True = [a, b, c] 의 누적합을 [0, a, a+b]이렇게 진행하는 것.\n",
+        "        # 계산 후 position의 첫 번째 행은 아마 [0,1,2,3,4,...]의 형태일 것임. 이는 sequence에서 토큰의 위치를 나타낸다고 볼 수 있음.\n",
+        "        # 위치에 따른 임베딩을 따로 학습한다고 볼 수 있음. 근데 굳이 exclusive를 해 준 이유는 아마 인덱스가 0부터 시작해서일듯?\n",
         "        position = tf.cast(tf.math.cumsum(tf.ones_like(inputs), axis=1, exclusive=True), tf.int32)\n",
         "        embed = self.embedding(position)\n",
         "        return embed"
@@ -3382,6 +3393,7 @@
         "        self.i_pad = config.i_pad\n",
         "        self.embedding = SharedEmbedding(config)\n",
         "        self.position = PositionEmbedding(config)\n",
+        "        # segment는 A문장 아니면 B문장이기 때문에 단어장 크기가 2임.\n",
         "        self.segment = tf.keras.layers.Embedding(2, config.d_model, embeddings_initializer=kernel_initializer())\n",
         "        self.norm = tf.keras.layers.LayerNormalization(epsilon=config.layernorm_epsilon)\n",
         "        \n",
@@ -3395,7 +3407,8 @@
         "        :param inputs: (enc_tokens, segments)\n",
         "        :return logits: dec_tokens에 대한 다음 토큰 예측 결과 logits\n",
         "        \"\"\"\n",
-        "        enc_tokens, segments = inputs\n",
+        "        # input에 대한 segments가 [a,a,a,a,a,a,b,b,b,b,b,b]뭐 이런 식으로 들어오면 a,b에 해당하는 임베딩을 학습함.\n",
+        "        enc_tokens, segments = inputs \n",
         "\n",
         "        enc_self_mask = tf.keras.layers.Lambda(get_pad_mask, output_shape=(1, None), name='enc_self_mask')(enc_tokens, self.i_pad)\n",
         "\n",
@@ -3405,7 +3418,7 @@
         "        for encoder_layer in self.encoder_layers:\n",
         "            enc_out = encoder_layer(enc_out, enc_self_mask)\n",
         "\n",
-        "        logits_cls = enc_out[:,0]\n",
+        "        logits_cls = enc_out[:,0] # [CLS]토큰의 최종 hidden state가져옴.\n",
         "        logits_lm = self.embedding(enc_out, mode=\"linear\")\n",
         "        return logits_cls, logits_lm\n",
         "    \n",
@@ -3457,7 +3470,7 @@
         "\n",
         "    bert = BERT(config)\n",
         "    logits_cls, logits_lm = bert((enc_tokens, segments))\n",
-        "\n",
+        "    # [CLS]토큰의 마지막 hidden state를 이용해서 IsNext 인지 NotNext인지를 판단함.\n",
         "    logits_cls = PooledOutput(config, 2, name=\"pooled_nsp\")(logits_cls)\n",
         "    outputs_nsp = tf.keras.layers.Softmax(name=\"nsp\")(logits_cls)\n",
         "\n",
